drawio_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
    labels:
      app: drawio
      app.kubernetes.io/component: drawio
      app.kubernetes.io/instance: drawio
    name: drawio
spec:
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: drawio
      weight: 100
    wildcardPolicy: None
