drawio_template.yaml
apiVersion: template.openshift.io/v1
kind: Template
metadata:
  annotations:
    description: "Application template for drawio"
  creationTimestamp: null
  name: drawio-config
objects:
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    annotations:
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"drawio:latest","namespace":"draw"},"fieldPath":"spec.template.spec.containers[?(@.name==\"drawio\")].image"}]'
    labels:
      app: drawio
      app.kubernetes.io/component: drawio
      app.kubernetes.io/instance: drawio
      app.kubernetes.io/part-of: drawio
    name: drawio
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: drawio
    template:
      metadata:
        labels:
          app: drawio
          deploymentconfig: drawio
      spec:
        containers:
        - image: docker.io/jgraph/drawio
          imagePullPolicy: Always
          name: drawio
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP

- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: drawio
      app.kubernetes.io/component: drawio
      app.kubernetes.io/instance: drawio
      app.kubernetes.io/part-of: drawio
    name: drawio
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    selector:
      app: drawio
      deploymentconfig: drawio
    sessionAffinity: None
    type: ClusterIP
  
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: drawio
      app.kubernetes.io/component: drawio
      app.kubernetes.io/instance: drawio
    name: drawio
  spec:
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: drawio
      weight: 100
    wildcardPolicy: None
